update sidebar style
changes:
- adjust sidebar item style
- change default document title
- comment out profile on sidebar
- uncomment out profile on navbar

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Battambang:wght@400;700&family=Nokora:wght@400;700&family=Roboto:wght@400;500;700;900&display=swap"
     rel="stylesheet">
-  <title>ZenoTech - Management</title>
+  <title>Management App</title>
   <style>
     html * {
       font-family: 'Nokora', 'Roboto', sans-serif, serif !important;
